Updated README and OpenAPI spec
